--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ipfs-http-client": "^60.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
