--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,14 +12,15 @@
     "@types/react-dom": "^18.0.10",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "ipfs-http-client": "^60.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
